* build.xml: Added the makepot target, which generates a POT file         from the plugin.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@127813 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/build.xml
+++ b/build.xml
@@ -13,4 +13,13 @@
             <fileset dir="." includes="**/*.php" />
         </apply>
     </target>
+    
+    <target name="makepot">
+        <!-- Run the WordPress i18n MakePOT utility. -->
+        <exec executable="php">
+            <arg value="${wpi18n}/makepot.php" />
+            <arg value="wp-plugin" />
+            <arg value="." />
+        </exec>
+    </target>
 </project>
