* build.xml: Converted tabs to spaces. 	* client.php: Converted tabs to spaces. 	* feed-stats.php: Converted tabs to spaces. 	* js/tabs.js: Converted tabs to spaces. 	* js/test.js: Converted tabs to spaces. 	* lang.php: Converted tabs to spaces. 	* parser.php: Converted tabs to spaces. 	* render.php: Converted tabs to spaces. 	* style.css.php: Converted tabs to spaces. 	* templates/header.php: Converted tabs to spaces. 	* templates/settings.php: Converted tabs to spaces. 	* templates/test.php: Converted tabs to spaces. 	* templates/troubleshooting.php: Converted tabs to spaces. 	* tests/client.php: Converted tabs to spaces.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@131006 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/build.xml
+++ b/build.xml
@@ -22,4 +22,15 @@
             <arg value="." />
         </exec>
     </target>
+    
+    <target name="cleanup">
+        <fixcrlf srcdir="." includes="**/*.js" eol="asis" tab="remove"
+            tablength="4" eof="asis" />
+        <fixcrlf srcdir="." includes="**/*.xml" eol="asis" tab="remove"
+            tablength="4" eof="asis" />
+        <fixcrlf srcdir="." includes="**/*.html" eol="asis" tab="remove"
+            tablength="4" eof="asis" />
+        <fixcrlf srcdir="." includes="**/*.php" eol="asis" tab="remove"
+            tablength="4" eof="asis" />
+    </target>
 </project>
