* build.xml: Updated the "preptag" target so that the copying.txt 		and changelog.txt files are properly copied to the tag.
git-svn-id: http://svn.wp-plugins.org/feed-stats-plugin/trunk@140760 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/build.xml
+++ b/build.xml
@@ -58,8 +58,8 @@
             <srcfile />
             <fileset dir=".">
                 <include name="*.php" />
-                <include name="ChangeLog" />
-                <include name="COPYING" />
+                <include name="changelog.txt" />
+                <include name="copying.txt" />
                 <include name="readme.txt" />
             </fileset>
             <arg value="../tags/${release}/" />
